tests/outref/TBP003.ref
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_TABLE : Unknown table: MYTABLE3
Error with syntax near (line 2, column 15):

INSERT INTO myTable2
SELECT * from myTable3;
              ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO myTable2
SELECT * from myTable3;
